# Architecture_Course_Homework_2

./: CMakeLists.txt  exeptions.h  main.cpp  motion.h  motion_tests.h  rotation.h  rotation_tests.h
.github/workflows/: cmake.yml
